# pyrho

./: CMakeLists.txt  PyRho.cpp  conanfile.py
src/: PyRho.cpp  PyRho20.cpp  PyRho20.h  PyRho20.qrc  main.cpp
src/tests/: PyRho_tests.cpp
